@@ -5,6 +5,8 @@ Changes
 0.4.0 (*unreleased*)
 ====================
 
+- add JSON output support with --json flag
+- add support for analyzing entire package directories
 - drop support for Python 3.8 and 3.9
 - add support for Python 3.13 and 3.14
 
